# git-statuses

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml  tree  typos.toml
.github/workflows/: ci.yml  coverage.yml  deploy.yml  publish_checks.yml
scripts/: release_version.ps1  release_version.sh
src/: cli.rs  gitinfo.rs  lib.rs  main.rs  output.rs  printer.rs  util.rs
src/gitinfo/: mod.rs  repoinfo.rs  status.rs
src/interactive/: helpers.rs  mod.rs  mode.rs
src/tests/: cli_test.rs  gitinfo_test.rs  integration_test.rs  main_test.rs  mod.rs  printer_test.rs  smoke_test.rs  util_test.rs
src/tests/snapshots/: git_statuses__tests__cli_test__git-statuses.snap
tests/: output_test.rs
