[package]
name = "git-statuses"
description = "A tool to display git repository statuses in a table format"
repository = "https://github.com/bircni/git-statuses"
version = "0.7.0"
authors = ["bircni"]
edition = "2024"
license = "MIT"
rust-version = "1.88"
readme = "README.md"
keywords = ["git", "status", "repository", "plugin", "cli"]
exclude = ["src/tests/*"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
comfy-table = "7.2.1"
crossterm = "0.29"
git2 = { version = "0.20", default-features = false, features = ["https", "ssh", "vendored-openssl"] }
log = "0.4.28"
parking_lot = "0.12.5"
ratatui = "0.29"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
simplelog = "0.12.2"
strum = { version = "0.27", features = ["strum_macros"] }
strum_macros = "0.27"
walkdir = "2.5"

[dev-dependencies]
insta = { version = "1.43", features = ["json"] }
tempfile = "3.23"


[lints.rust]
unsafe_code = "deny"
deprecated = "warn"
elided_lifetimes_in_paths = "warn"
rust_2021_prelude_collisions = "warn"
semicolon_in_expressions_from_macros = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"                         # `unsafe_op_in_unsafe_fn` may become the default in future Rust versions: https://github.com/rust-lang/rust/issues/71668
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[lints.rustdoc]
all = "warn"
missing_crate_level_docs = "warn"

[lints.clippy]
all = "warn"
correctness = "warn"
suspicious = "warn"
style = "warn"
complexity = "warn"
perf = "warn"
pedantic = "warn"
nursery = "warn"

# Additional lints from https://rust-lang.github.io/rust-clippy/master/index.html?groups=restriction
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
create_dir = "warn"
clone_on_ref_ptr = "warn"
expect_used = "warn"
missing_assert_message = "warn"
panic_in_result_fn = "warn"
str_to_string = "warn"
todo = "warn"
unwrap_used = "warn"
unimplemented = "warn"
wildcard_enum_match_arm = "warn"
